# mochi-deckgen-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/agents/: card-compressor.md  card-generator.md  card-modifier.md  card-verifier.md  deck-clarifier.md  deck-planner.md  image-card-creator.md  image-searcher.md  web-card-generator.md
.claude/skills/deck-generation/: SKILL.md
docs/plans/: 2026-05-10-deckgeneration.md
docs/specs/: 2026-05-10-deckgeneration-design.md  2026-05-10-mcp-refactor-design.md
docs/superpowers/plans/: 2026-05-10-mcp-refactor.md
scripts/: export_only.py  generate.py  verify.sh
src/deckgen/: cli.py  config.py
src/deckgen/exporters/: anki.py  csv_export.py  markdown_zip.py  mochi.py
src/deckgen/io/: deck_fs.py  image_fetch.py
src/deckgen_mcp/: config.py  registry.py  server.py
src/mochi_deckgen_mcp/: config.py  registry.py  server.py
src/mochi_tools_mcp/: config.py  registry.py  server.py
tests/: conftest.py  test_anthropic_client_smoke.py  test_cli_args.py  test_deck_ops.py  test_export_anki.py  test_export_csv.py  test_export_markdown_zip.py  test_export_mochi.py  test_export_only_script.py  test_fake_client.py  test_image_fetch.py  test_image_import.py  test_image_wikipedia.py  test_local_tools.py  test_local_tools_extended.py  test_malformed_check.py  test_mochi_client.py  test_mochi_client_extended.py  test_mochi_tools.py  test_mochi_tools_extended.py  test_nested_decks.py  test_orchestrator_e2e.py  test_parse_card.py  test_parse_card_new.py  test_pipeline_clarify.py  test_pipeline_export.py  test_pipeline_generate.py  test_pipeline_plan.py  test_pipeline_research.py  test_pipeline_verify.py  test_prompt_compression.py  test_read_deck.py  test_registry.py  test_server_registration.py  test_sync_diff.py  test_sync_mapping.py  test_sync_pull.py  test_sync_push.py  test_sync_tools.py  test_sync_tools_extended.py
(+84 files in other folders)
