[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckgen"
version = "0.1.0"
description = "Generate Mochi/Anki decks from a topic description"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "genanki>=0.13",
    "pydantic>=2.6",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
deckgen = "deckgen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deckgen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
