[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckgen-mcp"
version = "0.1.0"
description = "MCP server for Mochi flashcard deck generation, modification, and sync"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2.6",
    "Pillow>=10.0",
]

[project.optional-dependencies]
svg = ["cairosvg>=2.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "coverage>=7.5",
]

[project.scripts]
deckgen-mcp = "deckgen_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deckgen_mcp"]

[tool.hatch.build]
include = [
    "src/deckgen_mcp/**/*.py",
    "src/deckgen_mcp/prompts/**/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/deckgen_mcp"]

[[tool.mypy.overrides]]
module = ["cairosvg", "PIL", "PIL.*"]
ignore_missing_imports = true
